--- a/ToDoInterface/MainWindow.xaml
+++ b/ToDoInterface/MainWindow.xaml
@@ -1,7 +1,7 @@
-﻿<NavigationWindow x:Class="ToDoInterface.MainWindow"
+﻿<Window x:Class="ToDoInterface.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="XToDos" Height="350" Width="500"
                   Source="ToDoMainPage.xaml">
     
-</NavigationWindow>
+</Window>
