--- a/ToDoInterface/MainWindow.xaml
+++ b/ToDoInterface/MainWindow.xaml
@@ -1,7 +1,12 @@
 ﻿<Window x:Class="ToDoInterface.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="XToDos" Height="350" Width="500"
-                  Source="ToDoMainPage.xaml">
-    
+        Title="LabelControlSample" Height="180" Width="250">
+    <DockPanel Margin="10">
+        <TextBox SelectionChanged="TextBox_SelectionChanged" DockPanel.Dock="Top" />
+        <TextBox Name="txtStatus" AcceptsReturn="True" TextWrapping="Wrap" IsReadOnly="True" />
+
+    </DockPanel>
 </Window>
+    
+   
