--- a/WPFApp1/grdTasks.xaml
+++ b/WPFApp1/grdTasks.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ToDoInterface2.User_Controls.LimitedInputUserControl"
+﻿<UserControl x:Class="ToDoInterface2.User_Controls.grdTasks"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
